添加左侧导航条

--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -1,4 +1,4 @@
-<ion-view view-title="偶看博客-最新博文">
+<ion-view view-title="{{categoryName}}">
     <ion-content class="padding">
         <div class="list card" ng-repeat="p in postList">
             <div ng-click="postItem(p.ID)">
