--- a/www/templates/tab-weibo.html
+++ b/www/templates/tab-weibo.html
@@ -1,12 +1,14 @@
-<ion-view view-title="偶看博客-微博客">
+<ion-view view-title="{{categoryName}}">
     <ion-content class="padding">
-        <div class="list card" ng-repeat="p in weiboList">
-            <div ng-click="weiboItem(p.ID)">
+        <div class="list card" ng-repeat="p in items">
+            <div ng-click="postItem(p.ID)">
                 <div class="item item-divider">{{p.title}}</div>
                 <div class="item item-body">
                     <div ng-bind-html="p.excerpt"></div>
                 </div>
             </div>
         </div>
+        <ion-infinite-scroll ng-if="init.busy" on-infinite="loadMore()" distance="1%">
+        </ion-infinite-scroll>
     </ion-content>
 </ion-view>
