--- a/www/templates/category.html
+++ b/www/templates/category.html
@@ -3,6 +3,7 @@
         <div class="list card" ng-repeat="p in items">
             <div ng-click="postItem(p.ID)">
                 <div class="item item-divider">{{p.title}}</div>
+                <img class="featured-image" ng-src="{{p.featured_image.attachment_meta.sizes.thumbnail.url}}">
                 <div class="item item-body">
                     <div ng-bind-html="p.excerpt"></div>
                 </div>
