--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -13,6 +13,7 @@
         <div class="list card" ng-repeat="p in postList">
             <div ng-click="postItem(p.ID)">
                 <div class="item item-divider">{{p.title}}</div>
+                <img class="featured-image" ng-src="{{p.featured_image.attachment_meta.sizes.thumbnail.url}}">
                 <div class="item item-body">
                     <div ng-bind-html="p.excerpt"></div>
                 </div>
