--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 img {
-    /*防止图片过大*/
-    
+     /*防止图片过大 Prevent the picture is too large*/
     max-width: 100%;
     height: auto;
 }
@@ -48,4 +47,9 @@ img {
     box-shadow: 2px -2px 2px 0 rgba( 178, 178, 178, .4);
     background: linear-gradient(0deg, #F0F5FD 0%, #f6f9fe 100%);
     right: -9px;
+}
+
+.featured-image {
+  float: left;
+  padding-right: 10px;
 }
