add share this APP

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,15 +5,18 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
     <!-- Dashboard Tab -->
-    <ion-tab title="最新博文" icon-off="ion-plus-round" icon-on="ion-plus-round" href="#/tab/dash">
+    <ion-tab title="Posts" icon-off="ion-plus-round" icon-on="ion-plus-round" href="#/tab/dash">
         <ion-nav-view name="tab-dash"></ion-nav-view>
     </ion-tab>
     <!-- Chats Tab -->
-    <ion-tab title="微博客" icon-off="ion-chatbox" icon-on="ion-chatbox-working" href="#/tab/weibo">
+    <ion-tab title="Weibo" icon-off="ion-chatbox" icon-on="ion-chatbox-working" href="#/tab/weibo">
         <ion-nav-view name="tab-weibo"></ion-nav-view>
     </ion-tab>
     <!-- Account Tab -->
-    <ion-tab title="关于偶看" icon-off="ion-android-contact" icon-on="ion-android-contact" href="#/tab/account">
+    <ion-tab title="About" icon-off="ion-android-contact" icon-on="ion-android-contact" href="#/tab/account">
         <ion-nav-view name="tab-account"></ion-nav-view>
+    </ion-tab>
+    <ion-tab title="Search" icon-off="ion-search" icon-on="ion-search" href ui-sref="tab.search">
+        <ion-nav-view name="tab-dash"></ion-nav-view>
     </ion-tab>
 </ion-tabs>
