--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,7 +1,8 @@
+<!-- about -->
 <ion-view view-title="关于偶看">
     <ion-content class="padding">
         <div class="item item-body">
-            <div ng-bind-html="about.content"></div>
+            <div ng-bind-html="about.content.rendered"></div>
         </div>
     </ion-content>
 </ion-view>
