--- a/www/templates/weibo-item.html
+++ b/www/templates/weibo-item.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{postItem.title}}">
     <ion-content class="padding">
         <div class="item item-body">
-            <div ng-bind-html="postItem.content"></div>
+            <div ng-bind-html="postItem.content.rendered"></div>
         </div>
     </ion-content>
 </ion-view>
